# sentinel

./: .dockerignore  .env.example  .gitignore  HOWTO.md  IMPLEMENTATION.md  PLAN.md  README.md  REFERENCE.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  railway.json
backend/scripts/: deploy_testnet.py  generate_service_wallet.py  seed_chain.py  seed_ledger.py  testnet_e2e_demo.py
backend/sentinel/: __init__.py  config.py  container.py  main.py  observability.py
backend/sentinel/api/: dependencies.py  operators_registry.py
backend/sentinel/api/routes/: dashboard.py  evaluate.py  health.py  operators.py
backend/sentinel/core/: counters.py  counters_redis.py  decision.py  fingerprint.py  scorer.py
backend/sentinel/db/: init_db.py  session.py  tables.py
backend/sentinel/models/: __init__.py  evaluation.py  operator.py  reputation.py
backend/sentinel/payments/: __init__.py  circle.py  dummy.py  pool.py
backend/sentinel/reputation/: __init__.py  cache.py  contract_abis.json  dummy.py  ledger.py  repository.py  store.py
backend/sentinel/workers/: ledger_batch.py  pool_debit.py
backend/tests/: conftest.py
backend/tests/api/: test_operators_endpoint.py
backend/tests/integration/: test_arc_ledger.py  test_circle_payments_testnet.py  test_evaluate_endpoint.py  test_ledger_batch_worker.py  test_pool_debit_worker_testnet.py  test_postgres_store.py  test_redis_cache.py  test_redis_counters.py  test_reputation_repository.py
backend/tests/unit/: test_fingerprint.py  test_scorer.py
contracts/: MockERC20.vy  (+4 more)
(+75 files in other folders)
